[package]
name = "polly_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum               = "0.7"
tokio              = { version = "1", features = ["full"] }
aws-config         = "0.55.0"
aws-sdk-polly      = "0.26.0"
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0"
dotenv             = "0.15"
tower-http         = { version = "0.5.2", features = ["cors", "fs"] }
bytes              = "1.5"
byteorder          = "1.5"
